
option java_outer_classname="MapReduceTaskCommandProtocol";
package com.alachisoft.tayzgrid.common.protobuf;
message MapReduceTaskCommand {
	optional int64 requestId = 1;
	optional string taskId = 2;
	optional bytes mapReduceTask = 3;
	optional int64 outputOption = 4;
	optional sint32 callbackId = 5;
}