option java_outer_classname="TaskEnumeratorPointerProtocol";

package com.alachisoft.tayzgrid.common.protobuf;

message TaskEnumeratorPointer
{
	optional string taskId = 1;
	optional sint32 callbackId = 2;
	optional string clientId = 3;
	optional string clientIp = 4;
	optional sint32 clientPort = 5;
	optional string clusterIp = 6;
	optional sint32 clusterPort = 7;
}